--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1135,8 +1135,102 @@ body{
 //! ///---BLOGS---\\\ !\\
 
 /*! ///---BLOGS---\\\ !*/
+.test__inner{
+   background: url(../img/1617038939_17-p-oboi-fon-dlya-rabochego-stola-18.jpg) ;
+   padding: 50px 0px;
+   background-repeat: no-repeat;
+   background-position:top;
+   // position: fixed;
+}
+.swiper {
+   display: flex;
+   max-width: 1200px;
+   padding: 0px 40px;
+   margin:0px auto;
+   position: relative;
+   &__container {
+      max-width: 900px;
+      overflow: hidden;
+      margin: auto;
+      border-radius: 15px;
+      padding: 30px 0px;
+   }
+
+   &__line {
+      display: flex;
+      max-width: 900px;
+      transition: .5s;
+      padding: 50px 0px;
+      
+   }
+
+   &__item {
+      height: 300px;
+      flex-grow: 0;
+      flex-shrink: 0;
+      position: relative;
+      transition: .4s;
+      // transform: scale(0.7);
+      padding: 2px;
+
+      img{
+         width: 100%;
+         height: 100%;
+         object-fit: cover;
+
+      }
+
+   }
+   // ._back--left{
+   //    transition: .4s;
+   //    transform: perspective(300) rotatey(35deg) scale(0.9);
+   //    overflow: hidden;
+   //    position: relative;
+   //    opacity: 0.6;
+   // }
+   // ._back--right{
+   //    transition: .4s;
+   //    overflow: hidden;
+   //    position: relative;
+   //    transform: perspective(300) rotatey(-35deg) scale(0.9);
+   //    opacity: 0.6;
+   // }
+   &__left,&__right{
+      display: inline-block;
+      position: absolute;
+      font-size: 50px;
+      color: rgb(86, 86, 86);
+
+      top: 50%;
+      transform: translateY(-50%);
+      transition: .1s;
+      padding: 10px;
+      cursor:default;
+      background-color: rgba(255, 255, 255, 0.433);
+      &:hover{
+      color: rgb(255, 255, 255);
+
+         background-color: rgba(255, 255, 255, 0.13);
+      }
+   }
+   &__left{
+      left: 13px;
+      display: none;
+   }
+   &__right{
+      right: 13px;
+      display: none;
+
+   }
+   ._active{
+      display: block;
+   }
+}
 
 
+//! ///---SWIPER---\\\ !\\
+
+/*! ///---SWIPER---\\\ !*/
 .contact {
    min-width: 100%;
    font-family: myriad-pro, sans-serif;
@@ -2209,5 +2303,11 @@ body{
          position: relative;
          z-index: 1;
       }
+   }
+   .footer{
+      &__right{
+         background-position:65% 30% ;
+      }
+
    }
 }
